fixed header alignment and justification (#51)

--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -529,8 +529,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 10;
 }
 
+.float-right{
+  float: right;
+}
+
 .m-4{
   margin: 1rem;
+}
+
+.my-1{
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 }
 
 .mx-4{
@@ -564,8 +573,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.5rem;
 }
 
+.ml-4{
+  margin-left: 1rem;
+}
+
 .inline-block{
   display: inline-block;
+}
+
+.inline{
+  display: inline;
 }
 
 .flex{
@@ -614,20 +631,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: none;
 }
 
-.flex-auto{
-  flex: 1 1 auto;
+.flex-1{
+  flex: 1 1 0%;
 }
 
 .flex-none{
   flex: none;
 }
 
-.shrink{
-  flex-shrink: 1;
+.flex-auto{
+  flex: 1 1 auto;
 }
 
-.grow{
-  flex-grow: 1;
+.shrink{
+  flex-shrink: 1;
 }
 
 .border-separate{
@@ -656,14 +673,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .items-center{
   align-items: center;
-}
-
-.justify-end{
-  justify-content: flex-end;
-}
-
-.justify-center{
-  justify-content: center;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
@@ -763,24 +772,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 1rem;
 }
 
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 
 .px-8{
@@ -793,6 +792,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 0.25rem;
 }
 
+.pl-2{
+  padding-left: 0.5rem;
+}
+
+.pl-4{
+  padding-left: 1rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -801,8 +808,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   text-align: center;
 }
 
+.align-baseline{
+  vertical-align: baseline;
+}
+
+.align-bottom{
+  vertical-align: bottom;
+}
+
 .align-text-top{
   vertical-align: text-top;
+}
+
+.align-text-bottom{
+  vertical-align: text-bottom;
 }
 
 .font-sarabun{
